--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,23 @@
             <artifactId>guava</artifactId>
             <version>22.0</version>
         </dependency>
-
     </dependencies>
+
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 
 </project>
