--- a/dome_admin/pom.xml
+++ b/dome_admin/pom.xml
@@ -34,6 +34,11 @@
             <version>18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.lk</groupId>
+            <artifactId>lk_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -48,9 +53,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
         </dependency>
 
         <dependency>
@@ -202,6 +211,10 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
         </dependency>
         <!--mybatis 数据访问层 end -->
 
