--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,15 @@
     </modules>
 
     <properties>
+        <java.version>1.8</java.version>
         <lombok.version>1.16.8</lombok.version>
         <logback.version>1.1.7</logback.version>
         <junit.version>4.12</junit.version>
         <!-- 取消 Warning:java: 源值1.5已过时, 将在未来所有发行版中删除 报错 -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring.version>4.3.2.RELEASE</spring.version>
+        <spring.version>4.3.2</spring.version>
+        <project.encoding>utf-8</project.encoding>
     </properties>
 
 
@@ -251,6 +253,34 @@
                     <version>2.2</version>
                     <configuration>
                         <warSourceDirectory>${basedir}/src/main/webapp</warSourceDirectory>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.6.2</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <encoding>${project.encoding}</encoding>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <encoding>${project.encoding}</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <encoding>${project.encoding}</encoding>
                     </configuration>
                 </plugin>
             </plugins>
